@@ -2,19 +2,15 @@ EXPORTS
 
    crInstallW                     @7
    crInstallA                     @8
-   crUninstall                    @9
-   crInstallToCurrentThread       @10
+   crUninstall                    @9   
    crInstallToCurrentThread2      @11
    crUninstallFromCurrentThread   @12
-   crAddFileW                     @13
-   crAddFileA                     @14
    crAddFile2W                    @15
    crAddFile2A                    @16
    crAddScreenshot                @17
    crAddPropertyW                 @18
    crAddPropertyA                 @19
-   crGenerateErrorReport          @20
-   crExceptionFilter              @21
+   crGenerateErrorReport          @20   
    crEmulateCrash                 @22
    crGetLastErrorMsgW             @23
    crGetLastErrorMsgA             @24
