@@ -42,18 +42,7 @@ class CDetailDlg :
 {
 public:
     enum { IDD = IDD_DETAILDLG };
-
-    CImageList  m_iconList;       // Shell icon list
-    CListViewCtrl m_list;
-    CHyperLink m_linkPrivacyPolicy;
-    CButton m_btnClose;
-    CButton m_btnExport;
-    CStatic m_statPreview;     
-    CFilePreviewCtrl m_filePreview; 
-    PreviewMode m_previewMode;    // Current preview mode
-    TextEncoding m_textEncoding;  // Current text encoding
-    int m_nCurReport;             // Index of the error report currently being displayed
-
+	    
     BEGIN_DLGRESIZE_MAP(CProgressDlg)    
         DLGRESIZE_CONTROL(IDC_FILE_LIST, DLSZ_SIZE_X)
         DLGRESIZE_CONTROL(IDC_PREVIEW, DLSZ_SIZE_X|DLSZ_SIZE_Y)
@@ -72,6 +61,7 @@ public:
         COMMAND_RANGE_HANDLER(ID_PREVIEW_AUTO, ID_PREVIEW_IMAGE, OnPreviewModeChanged)
         COMMAND_RANGE_HANDLER(ID_ENCODING_AUTO, ID_ENCODING_UTF16BE, OnTextEncodingChanged)
         NOTIFY_HANDLER(IDC_PREVIEW, NM_RCLICK, OnPreviewRClick)
+		NOTIFY_HANDLER(IDC_FILE_LIST, NM_RCLICK, OnListRClick)
 
         CHAIN_MSG_MAP(CDialogResize<CDetailDlg>)
     END_MSG_MAP()
@@ -90,9 +80,20 @@ public:
     LRESULT OnItemChanged(int /*idCtrl*/, LPNMHDR pnmh, BOOL& /*bHandled*/);
     LRESULT OnItemDblClicked(int /*idCtrl*/, LPNMHDR pnmh, BOOL& /*bHandled*/);
     LRESULT OnPreviewRClick(int /*idCtrl*/, LPNMHDR /*pnmh*/, BOOL& /*bHandled*/);
-
+	LRESULT OnListRClick(int /*idCtrl*/, LPNMHDR /*pnmh*/, BOOL& /*bHandled*/);
 
     void SelectItem(int iItem);
+
+	CImageList  m_iconList;       // Shell icon list
+    CListViewCtrl m_list;
+    CHyperLink m_linkPrivacyPolicy;
+    CButton m_btnClose;
+    CButton m_btnExport;
+    CStatic m_statPreview;     
+    CFilePreviewCtrl m_filePreview; 
+    PreviewMode m_previewMode;    // Current preview mode
+    TextEncoding m_textEncoding;  // Current text encoding
+    int m_nCurReport;             // Index of the error report currently being displayed
 
 };
 
