@@ -2,6 +2,18 @@
 
 --- Ver. 1.3.1 ---
 
+- New: Removed deprecated functions crAddFileA(), crAddFileW(), 
+       crInstallToCurrentThread(), crExceptionFilter().
+
+- New: Improved robustness to stack overflow (issue 121). Now stack overflow is handled
+       in separate thread makeing CrashRpt more robust to problem of not enogh stack memory.
+       
+- New: Added constant CR_STACK_OVERFLOW that can be passed to crEmulateCrash() function
+       to cause stack overflow.
+
+- New: Added an ability to attach more files to error report or delete selected files
+       from error report through context menu of Error Report Details dialog (issue 132).
+
 - New: Added support of SMTP authentication (AUTH LOGIN) (Issue 143).
 
 - New: Added an ability to store the user's E-mail address and re-use later. When user
@@ -28,7 +40,6 @@
 - Fixed: Crash report is not discarded when 'Close the program' is selected (issue 94).
 - Fixed: Application is restarted twice after crash (issue 115).
 - Fixed: CRP_COL_PROBLEM_DESCRIPTION not working (issue 118).
-- Fixed: Improve robustness to stack overflow (issue 121).
 - Fixed: When copying a log file into the crash archive, access it with FILE_SHARE_WRITE (issue 124)
 - Fixed: Support multiple e-mail recipients (issue 123).
 - Fixed: Support multiple crash reports per application instance (issue 127)
